--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Weather Dashboard</h1>
+    <form id="city-form">
+        <input type="text" id="city-input" placeholder="Enter city name">
+        <button type="submit">Search</button>
+    </form>
+    <div id="current-weather">
+    </div>
+
+    <div id="forecast">
+    </div>
+
+    <div id="search-history">
+    </div>   
+
+   
+    <script src="./style/script.js"></script>
 </body>
 </html>
